# photomate

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
common/: build.gradle.kts
core-analysis/: build.gradle.kts
core-analysis/src/main/kotlin/com/photomate/analysis/composition/: CompositionAnalyzer.kt
core-analysis/src/main/kotlin/com/photomate/analysis/model/: CompositionScore.kt  DeviceCapabilities.kt  FrameInput.kt  GuidanceResult.kt  LightingCondition.kt  ParameterSuggestion.kt  SceneType.kt
core-analysis/src/main/kotlin/com/photomate/analysis/parameter/: ParameterAdvisor.kt
core-analysis/src/test/kotlin/com/photomate/analysis/: CompositionAnalyzerTest.kt  ParameterAdvisorTest.kt
docs/: PRD.md
docs/adr/: 0001-real-time-guidance-fully-on-device.md  0002-qwen-vl-for-critique.md
gateway/: build.gradle.kts
guidance-orchestrator/: build.gradle.kts
param-recommendation/: build.gradle.kts
photo-service/: build.gradle.kts
proto/: build.gradle.kts
proto/src/main/proto/: guidance.proto  parameter.proto  scene.proto
scene-intelligence/: pyproject.toml
scene-intelligence/src/composition_analyzer/: analyzer.py
scene-intelligence/src/grpc_server/: server.py
scene-intelligence/src/lighting_assessor/: assessor.py
scene-intelligence/src/scene_classifier/: classifier.py
user-service/: build.gradle.kts
